reafctor: adopt CommonUtils to PMD warnings
Signed-off-by: Maximilian Huber <external.maximilian.huber2@bosch-si.com>